fix minor design on mobile

--- a/src/styles/components/Footer.scss
+++ b/src/styles/components/Footer.scss
@@ -471,7 +471,7 @@
 
                 .name-txt {
                   flex: 0;
-                  font-size: $small;
+                  font-size: $x-small;
                   font-weight: 400;
                 }
                 .name {
@@ -522,7 +522,7 @@
                 }
                 .time {
                   margin-left: 8px;
-                  font-size: $small;
+                  font-size: $x-small;
                   span {
                     margin-left: 12px;
                     margin-right: 12px;
