--- a/src/styles/pages/Home.scss
+++ b/src/styles/pages/Home.scss
@@ -362,7 +362,7 @@
     }
     .treatment-process-section {
       margin-top: 0px;
-      margin-bottom: 60px;
+      margin-bottom: 40px;
       .treatment-process-title-container {
         height: 70px;
         width: 95%;
@@ -374,7 +374,7 @@
         flex-direction: column;
         .treatment-proccess-card-conainer {
           width: 100% !important;
-          height: 350px !important;
+          height: 360px !important;
         }
         .card-1 {
           left: -99%;
